// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScanDownload Component should handle custom children: custom 1`] = `
<Button
  onClick={[Function]}
  title="t(table.label_action_scan, {"context":"download"})"
>
  lorem ipsum
</Button>
`;

exports[`ScanDownload Component should have an optional tooltip: tooltip 1`] = `
<Tooltip
  content="Lorem ipsum dolor sit"
  delayShow={500}
  id={null}
  isPopover={false}
  placement="top"
>
  <Button
    onClick={[Function]}
    title="t(table.label_action_scan, {"context":"download"})"
  >
    t(table.label_action_scan, {"context":"download"})
  </Button>
</Tooltip>
`;

exports[`ScanDownload Component should render a basic component: basic 1`] = `
<Button
  onClick={[Function]}
  title="t(table.label_action_scan, {"context":"download"})"
>
  t(table.label_action_scan, {"context":"download"})
</Button>
`;
